feat(player-manager): add resume support

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -22,7 +22,6 @@
     "ok": "Ok"
   },
   "byArtist": "By",
-  "confirm": "Confirm",
   "cancel": "Cancel",
   "castAndCrew": "Cast & Crew",
   "changeServer": "Change server",
@@ -30,6 +29,7 @@
   "collections": "Collections",
   "communityRating": "Community rating",
   "composer": "Composer",
+  "confirm": "Confirm",
   "connect": "Connect",
   "continueListening": "Continue listening",
   "continueWatching": "Continue watching",
@@ -136,6 +136,7 @@
   "people": "People",
   "person": "Person",
   "play": "Play",
+  "playFromBeginning": "Play from the beginning",
   "played": "Played",
   "present": "Present",
   "primary": "Primary",
@@ -146,6 +147,7 @@
   "releaseDate": "Release date",
   "rememberMe": "Remember me",
   "resumable": "Resumable",
+  "resume": "Resume",
   "role": "Role",
   "save": "Save",
   "saved": "Saved",
@@ -163,24 +165,24 @@
   "serverVersion": "Server version",
   "serverVersionTooLow": "Server version needs to be 10.7.0 or higher",
   "settings": {
-    "settings": "Settings",
     "apiKeys": {
-      "apiKeys": "API keys",
-      "description": "Add and revoke API keys for external access to your server",
-      "appName": "App name",
       "accessToken": "Access token",
-      "dateCreated": "Date created",
-      "revokeSuccess": "Successfully revoked API key",
-      "revokeFailure": "Error revoking API key",
-      "revokeAll": "Revoke all API keys",
-      "revokeAllSuccess": "Successfully revoked all API keys",
-      "revokeAllFailure": "Error revoking all API keys",
+      "addApiKey": "Add an API key",
       "addNewKey": "Add new API key",
-      "createKeySuccess": "Successfully created a new API key",
+      "apiKeys": "API keys",
+      "appName": "App name",
       "createKeyFailure": "Error creating a new API key",
+      "createKeySuccess": "Successfully created a new API key",
+      "dateCreated": "Date created",
+      "description": "Add and revoke API keys for external access to your server",
       "refreshKeysFailure": "Error refreshing API keys",
-      "addApiKey": "Add an API key"
-    }
+      "revokeAll": "Revoke all API keys",
+      "revokeAllFailure": "Error revoking all API keys",
+      "revokeAllSuccess": "Successfully revoked all API keys",
+      "revokeFailure": "Error revoking API key",
+      "revokeSuccess": "Successfully revoked API key"
+    },
+    "settings": "Settings"
   },
   "settingsSections": {
     "account": {
@@ -290,9 +292,9 @@
   "username": "Username",
   "usernameRequired": "Username is required",
   "validation": {
+    "bothPasswordsSame": "Both passwords must be the save",
     "mustBeUrl": "This field must be a valid URL",
-    "required": "This field is required",
-    "bothPasswordsSame": "Both passwords must be the save"
+    "required": "This field is required"
   },
   "version": "Version",
   "video": "Video",
@@ -300,23 +302,23 @@
   "viewDetails": "View details",
   "vueClientVersion": "Vue client version",
   "wizard": {
+    "administratorAccount": "Administrator account",
+    "allowRemoteAccess": "Allow remote access to the server",
+    "completeError": "Unable to complete startup wizard.",
     "confirmPassword": "Confirm password",
-    "setupWizard": "Setup wizard",
+    "languageLocale": "Language and locale",
+    "languageSuccessfullySet": "Language successfully set.",
+    "metadataLanguagesSet": "Metadata languages set.",
+    "preferedLanguage": "Prefered language",
+    "preferredMetadataLanguage": "Preferred metadata language",
+    "remoteAccess": "Remote Access",
+    "remoteAccessSet": "Remote access set.",
     "setAdminError": "Unable to create an admin account.",
     "setLanguageError": "Unable to set client language.",
     "setMetadataError": "Unable to set metadata languages.",
     "setRemoteError": "Unable to set remote access settings.",
-    "languageSuccessfullySet": "Language successfully set.",
-    "userSuccessfullySet": "User successfully set.",
-    "metadataLanguagesSet": "Metadata languages set.",
-    "remoteAccessSet": "Remote access set.",
-    "completeError": "Unable to complete startup wizard.",
-    "preferredMetadataLanguage": "Preferred metadata language",
-    "preferedLanguage": "Prefered language",
-    "languageLocale": "Language and locale",
-    "administratorAccount": "Administrator account",
-    "allowRemoteAccess": "Allow remote access to the server",
-    "remoteAccess": "Remote Access"
+    "setupWizard": "Setup wizard",
+    "userSuccessfullySet": "User successfully set."
   },
   "writer": "Writer",
   "writing": "Writing",
